kubernetes/apps/logging/elk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  annotations:
    nginx.org/ssl-services: "elk-eck-kibana-kb-http"
    nginx.org/location-snippets: |
      auth_request off;
spec:
  ingressClassName: nginx
  rules:
    - host: elk.wakkalabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elk-eck-kibana-kb-http
                port:
                  number: 5601
  tls:
    - hosts:
        - elk.wakkalabs.com          # remember to add your own public domain
      secretName: kibana-tls   #
